--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "bootstrap-regrid",
-  "version": "0.1.4",
+  "version": "0.1.5",
   "description": "Bootstrap consistent grid columns on nesting.",
   "author": "Jo Santana <josantana@jogalabs.com> (http://josantana.net)",
   "license": "MIT",
@@ -22,7 +22,7 @@
     "url": "https://github.com/josantana/bootstrap-regrid/issues"
   },
   "devDependencies": {
-    "bootstrap": "4.0.0-alpha.2",
+    "bootstrap": "^4.0.0-alpha.3",
     "gulp": "^3.9.0",
     "gulp-autoprefixer": "^3.1.0",
     "gulp-changed": "^1.3.0",
